Update Triton Inference Server Model Metrics.dash.yaml

--- a/triton/Triton Inference Server Model Metrics.dash.yaml
+++ b/triton/Triton Inference Server Model Metrics.dash.yaml
@@ -6,7 +6,6 @@ properties:
                                                       <h2 style="font-weight: 600; font-size: large" id="${this}Value">${value}</h2>
                                                       <p style="font-weight: 400" id="${this}Title"><em id="${this}Icon" class=""></em> ${title}</p>
                                                     </div>
-    modelSanitizeExpression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
 datasets:
     - uuid: metrics
       url: https://raw.githubusercontent.com/jesuino/dashbuilder-yaml-samples/main/triton/data/metrics
@@ -19,7 +18,7 @@ datasets:
             type: NUMBER
 pages:
     - properties:
-        margin-left: 10px
+        margin-left: 5px
       rows:
           - columns:
                 - components:
@@ -33,7 +32,33 @@ pages:
                       - settings:
                             type: METRIC
                             general:
-                                title: Total Inference
+                                title: Running Models
+                                visible: "true"
+                            chart:
+                                width: "150"
+                            html:
+                                html: ${cardTemplate}
+                                javascript: document.getElementById(${this}.id + "Icon").className = "fa fa-cubes";
+                            columns:
+                                - id: labels
+                                  pattern: "#"
+                            lookup:
+                                uuid: metrics
+                                filter:
+                                    - column: metric
+                                      function: EQUALS_TO
+                                      args:
+                                          - nv_inference_count
+                                group:
+                                    - functions:
+                                          - source: labels
+                                            function: COUNT
+                - span: "3"
+                  components:
+                      - settings:
+                            type: METRIC
+                            general:
+                                title: Inference Count
                                 visible: "true"
                             chart:
                                 width: "150"
@@ -59,7 +84,7 @@ pages:
                       - settings:
                             type: METRIC
                             general:
-                                title: Successful Requests
+                                title: Inference Requests Success
                                 visible: "true"
                             chart:
                                 width: "150"
@@ -85,7 +110,7 @@ pages:
                       - settings:
                             type: METRIC
                             general:
-                                title: Failure Requests
+                                title: Inference Requests Failure
                                 visible: "true"
 
                             chart:
@@ -107,41 +132,10 @@ pages:
                                     - functions:
                                           - source: value
                                             function: SUM
-                - span: "3"
-                  components:
-                      - settings:
-                            type: METRIC
-                            general:
-                                title: Cache Hits
-                                visible: "true"
-                            chart:
-                                width: "150"
-                            html:
-                                html: ${cardTemplate}
-                                javascript: document.getElementById(${this}.id + "Icon").className = "pficon-volume";
-                            columns:
-                                - id: value                                  
-                                  expression: value / 1000
-                                  pattern: "#"
-                            lookup:
-                                uuid: metrics
-                                filter:
-                                    - column: metric
-                                      function: EQUALS_TO
-                                      args:
-                                          - nv_cache_num_hits_per_model
-                                group:
-                                    - functions:
-                                          - source: value
-                                            function: SUM
-          - columns:
-                - properties:
-                      margin-top: 20px
-                  components:
-                      - html: >-
-                                <h2 style='text-align: center'>Inference by Model</h2> <hr />
+
           - properties:
-                height: 500px
+                height: 250px
+                margin-top: 20px
             columns:
                 - span: "4"
                   components:
@@ -156,9 +150,12 @@ pages:
                                 title: "Inference Count"                                
                                 gridx: "true"
                                 themeColor: green
+                                fixLabelsOverlap: "true"
                             columns:
                                 - id: labels
-                                  expression: value.replaceAll("\"", "'")
+                                  expression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
+                                - id: value
+                                  pattern: "#"
                             lookup:
                                 uuid: metrics
                                 sort:
@@ -188,9 +185,12 @@ pages:
                                 paddingBottom: "70"
                                 title: "Model Request Success"
                                 gridx: "true"
+                                fixLabelsOverlap: "true"
                             columns:
                                 - id: labels
                                   expression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
+                                - id: value
+                                  pattern: "#"
                             lookup:
                                 uuid: metrics
                                 sort:
@@ -202,6 +202,7 @@ pages:
                                       args:
                                           - nv_inference_request_success
                                 group:
+
                                     - columnGroup:
                                           source: labels
                                       functions:
@@ -216,16 +217,55 @@ pages:
                       - settings:
                             component: victory-charts
                             victory-charts:
+                                paddingTop: "10"
+                                paddingBottom: "70"
+                                title: "Model Request Success"
+                                gridx: "true"
+                                fixLabelsOverlap: "true"
+                            columns:
+                                - id: labels
+                                  expression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
+                                - id: value
+                                  pattern: "#"
+                            lookup:
+                                uuid: metrics
+                                sort:
+                                    - column: value
+                                      sortOrder: DESCENDING
+                                filter:
+                                    - column: metric
+                                      function: EQUALS_TO
+                                      args:
+                                          - nv_inference_request_failure
+                                group:
+
+                                    - columnGroup:
+                                          source: labels
+                                      functions:
+                                          - source: labels
+                                          - source: value
+                                            function: SUM
+          - properties:
+                height: 250px
+                margin-top: 120px
+            columns:
+                - span: "4"
+                  components:
+                      - html: <h3>Request Total Duration</h3>
+                        properties:
+                            text-align: center
+                      - settings:
+                            component: victory-charts
+                            victory-charts:
                                 themeColor: "blue"
                                 paddingTop: "10"
                                 paddingBottom: "70"
                                 title: "Average Duration"
                                 gridx: "true"
+                                fixLabelsOverlap: "true"
                             columns:
                                 - id: labels
-                                  expression: value.replaceAll("\"", "'")
-                                - id: Average Duration  
-                                  #expression: value / 1000
+                                  expression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
                             lookup:
                                 uuid: metrics
                                 sort:
@@ -242,4 +282,72 @@ pages:
                                       functions:
                                           - source: labels
                                           - source: value
-
+                                            column: Duration
+                - span: "4"
+                  components:
+                      - html: <h3>Inference Total Duration</h3>
+                        properties:
+                            text-align: center
+                      - settings:
+                            component: victory-charts
+                            victory-charts:
+                                themeColor: "blue"
+                                paddingTop: "10"
+                                paddingBottom: "70"
+                                title: "Average Duration"
+                                gridx: "true"
+                                fixLabelsOverlap: "true"
+                            columns:
+                                - id: labels
+                                  expression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
+                            lookup:
+                                uuid: metrics
+                                sort:
+                                    - column: value
+                                      sortOrder: DESCENDING
+                                filter:
+                                    - column: metric
+                                      function: EQUALS_TO
+                                      args:
+                                          - nv_inference_compute_infer_duration_us
+                                group:
+                                    - columnGroup:
+                                          source: labels
+                                      functions:
+                                          - source: labels
+                                          - source: value
+                                            column: Duration
+                - span: "4"
+                  components:
+                      - html: <h3>Inference Queue Wait</h3>
+                        properties:
+                            text-align: center
+                      - settings:
+                            component: victory-charts
+                            victory-charts:
+                                themeColor: "blue"
+                                paddingTop: "10"
+                                paddingBottom: "70"
+                                title: "Average Duration"
+                                gridx: "true"
+                                fixLabelsOverlap: "true"
+                            columns:
+                                - id: labels
+                                  expression: value.replaceAll("\"", "").replaceAll("model=", "").replaceAll("version=", "").replaceAll(",", " v")
+                            lookup:
+                                uuid: metrics
+                                sort:
+                                    - column: value
+                                      sortOrder: DESCENDING
+                                filter:
+                                    - column: metric
+                                      function: EQUALS_TO
+                                      args:
+                                          - nv_inference_queue_duration_us
+                                group:
+                                    - columnGroup:
+                                          source: labels
+                                      functions:
+                                          - source: labels
+                                          - source: value
+                                            column: Duration
