--- a/random/jbang_version_checks.dash.yaml
+++ b/random/jbang_version_checks.dash.yaml
@@ -27,8 +27,8 @@ pages:
                     minBubbleSize: "1.5"
                     maxBubbleSize: "15"
                 external:
-                    width: 1200px
-                    height: 900px
+                    width: 100%
+                    height: 800px
                 lookup:
                     uuid: data
                     group:
