--- a/random/jbang_version_checks.dash.yaml
+++ b/random/jbang_version_checks.dash.yaml
@@ -1,16 +1,7 @@
 datasets:
     - uuid: data      
       url: https://www.jbang.dev/assets/data/jbang-versionchecks.csv
-      content: >-
-                [
-                  ["-15.7750656", "-48.0773013", "212"],
-                  ["-23.533773", "-46.625290", "20"],
-                  ["40.7128", "-74.006", "30"],     
-            
-                  ["38.8938672", "-77.0846156", "300"],
-                  ["55.5815245", "36.8251412", "120"],
-                  ["39.9390731", "116.1172793", "1200"]
-                ]
+      cacheEnabled: "true"
       columns:
           - id: lat
             type: number    
@@ -24,8 +15,14 @@ pages:
                 component: map
                 map:
                     enableZoom: "true"
+                    bubbleFill: "blue"
+                    bubbleStroke: "black"
+                    bubbleStrokeWidth: "0.2"
                     minBubbleSize: "1.5"
-                    maxBubbleSize: "15"
+                    maxBubbleSize: "10"
+                    bubbleOpacity: "0.6"
+                    maxZoom: "20"
+                    fill: lightgray
                 external:
                     width: 100%
                     height: 800px
